Add query persistence for stations, route/track filtering, general cleanup.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@blueprintjs/icons": "^5.2.1",
     "@blueprintjs/select": "^5.0.16",
     "@blueprintjs/table": "^5.0.16",
+    "@tanstack/query-sync-storage-persister": "^5.14.2",
     "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-persist-client": "^5.14.6",
     "axios": "1.6.0",
+    "core-js": "^3.34.0",
     "lodash": "^4.17.21",
     "luxon": "^3.4.3",
     "react": "^18.2.0",
