--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.5.1",
-    "@blueprintjs/datetime": "^5.2.8",
-    "@blueprintjs/datetime2": "^2.2.1",
-    "@blueprintjs/icons": "^5.2.1",
-    "@blueprintjs/select": "^5.0.20",
-    "@blueprintjs/table": "^5.0.16",
-    "@tanstack/query-sync-storage-persister": "^5.14.2",
-    "@tanstack/react-query": "^5.0.0",
-    "@tanstack/react-query-persist-client": "^5.14.6",
-    "axios": "1.6.0",
-    "core-js": "^3.34.0",
+    "@blueprintjs/core": "^5.8.1",
+    "@blueprintjs/datetime": "^5.2.10",
+    "@blueprintjs/datetime2": "^2.2.9",
+    "@blueprintjs/icons": "^5.7.0",
+    "@blueprintjs/select": "^5.0.22",
+    "@blueprintjs/table": "^5.0.22",
+    "@tanstack/query-sync-storage-persister": "^5.17.9",
+    "@tanstack/react-query": "^5.17.9",
+    "@tanstack/react-query-persist-client": "^5.17.9",
+    "axios": "^1.6.5",
+    "core-js": "^3.35.0",
     "lodash": "^4.17.21",
-    "luxon": "^3.4.3",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "urlcat": "^3.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.45",
+    "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "prettier": "^3.0.3",
-    "sass": "^1.69.4",
-    "vite": "5.0.5"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.7",
+    "vite": "^5.0.11"
   },
   "overrides": {
     "@blueprintjs/datetime": {
